Small fix for share styling in dark mode

--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -960,6 +960,10 @@ article.full-post .entry-footer.tagged .meta {
         color: #DDD;
     }
 
+    div.sharedaddy h3.sd-title {
+        color: #777;
+    }
+
     .liveblog-entry {
         background: transparent;
         border-top: 2px solid #444;
